--- a/ChatHouse/app/src/main/res/layout/activity_room.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_room.xml
@@ -55,6 +55,7 @@
             android:layout_height="match_parent"
             android:layout_above="@+id/reply_bar"
             android:layout_alignParentTop="true"
+            android:layout_marginBottom="10dp"
             android:orientation="vertical">
 
             <ListView
@@ -135,7 +136,7 @@
         <ImageButton
             android:id="@+id/chat_downBtn"
             android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:layout_above="@id/SendButton"
             android:layout_alignParentEnd="true"
             android:layout_marginRight="30dp"
@@ -164,29 +165,19 @@
             android:layout_marginHorizontal="7dp"
             android:layout_toStartOf="@+id/SendButton"
             android:layout_toEndOf="@+id/Attachment"
+            android:textColor="?colorOnSurface"
             android:hint="Enter message"
             android:maxLines="6"
             android:minHeight="60dp">
 
         </EditText>
 
-        <ImageView
-            android:id="@+id/Imageview"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="49dp"
-            android:adjustViewBounds="false"
-            android:clickable="true"
-            app:layout_collapseMode="parallax"
-            app:layout_collapseParallaxMultiplier="0.7">
 
-        </ImageView>
 
         <ImageButton
             android:id="@+id/SendButton"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginRight="10dp"
@@ -204,5 +195,26 @@
 <!--            android:background="?colorPrimaryVariant">-->
 
 <!--        </View>-->
+    <ImageView
+        android:id="@+id/Imageview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentBottom="true"
+        android:clickable="true"
+        app:layout_collapseMode="parallax"
+        android:background="@color/black"
+        app:layout_collapseParallaxMultiplier="0.7">
+
+    </ImageView>
+    <ImageButton
+        android:id="@+id/SendButtonImage"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="10dp"
+        android:background="@color/black"
+
+        android:src="@drawable/ic_baseline_send_image"></ImageButton>
 
 </RelativeLayout>
